<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rho_filter</name>
    <version>0.0.1</version>
    <description>Rho Filter: A RISE-based differentiator by Cristian Nino with exponential convergence. Estimates only one derivative higher than what is measurable.</description>
    <maintainer email="mgardenswartz@ufl.edu">user</maintainer>
    <license>MPL-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>eigen</depend>
    <depend>eigen3_cmake_module</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>